k8s/hospital-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-deployment
  namespace: hospital
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hospital
  template:
    metadata:
      labels:
        app: hospital
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: hospital-app
        image: jfrog.it-academy.by/public/hospital/app:17
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "1024Mi"
            cpu: "1000m"
          limits:
            memory: "2048Mi"
            cpu: "2000m"
        livenessProbe:
          httpGet:
            path: /hospital/actuator/health/liveness
            port: 8080
            scheme: HTTP
            httpHeaders:
              - name: X-Forwarded-Proto
                value: https
          initialDelaySeconds: 120
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
          successThreshold: 1

        readinessProbe:
          httpGet:
            path: /hospital/actuator/health/readiness
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3
          successThreshold: 1

        startupProbe:
          httpGet:
            path: /hospital/actuator/health/readiness
            port: 8080
            scheme: HTTP
          failureThreshold: 30
          periodSeconds: 5
          timeoutSeconds: 2

        lifecycle:
          preStop:
            exec:
              command: [ "sh", "-c", "sleep 10" ]
