k8s/mysql_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: hospital
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
  type: ClusterIP
